# dotemacs

./: .emacs  .gitattributes  .gitignore  .gitmodules  .hgtags  README.md  add-subtree.sh  dotemacs.el  emacs-general-conf.el  flake.nix  init.el  merge-changes.sh  rebuild.sh  recompile.el  recompile.sh  record-merge-commit-in-grafts.sh  set-up-environment-variables.el  set-up-font.el  set-up-paths.el  set-up-platform.el  subtree-utils.sh  test-pristine.sh  test-with-asserts.sh  update-third-party.sh  vim-combat.el  vim-commands.el  vim-compat.el  vim-core.el  vim-ex-commands.el  vim-ex.el  vim-insert-mode.el  vim-keymap.el  vim-keys.el  vim-macs.el  vim-maps.el  vim-modes.el  vim-motions.el  vim-node.el  vim-normal-mode.el  vim-scroll.el  (+6 more)
execs/: ps-to-png.py
native/emacs_module_rs/: Cargo.toml  flake.nix
native/emacs_module_rs/src/: emacs_conv.rs  find.rs  fuzzy_match.rs  lib.rs  path.rs
native/rure-ffi/: flake.nix  rure-ffi.cabal
native/rure-ffi/src/Data/Regex/: Rure.hs
native/rure-ffi/src/Data/Regex/Rure/: FFI.hsc
native/rure-ffi/test/: TestMain.hs
native/tree-sitter-haskell/: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  regenerate.sh  tree-sitter.json
native/tree-sitter-haskell/.github/workflows/: assets.yml  ci.yml  legacy.yml
native/tree-sitter-haskell/bindings/go/: binding_test.go  go.mod
native/tree-sitter-haskell/bindings/rust/: lib.rs
native/tree-sitter-haskell/grammar/: data.js  decl.js  exp.js  externals.js  id.js  inline.js  lexeme.js  literal.js  module.js  type.js  util.js
native/tree-sitter-haskell/hsc/: Makefile  grammar.js  package.json
native/tree-sitter-haskell/hsc/src/: grammar.json  grammar.json.xz  node-types.json  node-types.json.xz  parser.c.xz  scanner.c
native/tree-sitter-haskell/nix/: outputs.nix
native/tree-sitter-haskell/queries/: highlights.scm  tags.scm
native/tree-sitter-haskell/src/: grammar.json  grammar.json.xz  node-types.json  node-types.json.xz  parser.c.xz  scanner.c
native/tree-sitter-haskell/test/: main  parse-wasm.mjs
native/tree-sitter-haskell/test/corpus/: comment.txt  context.txt  family.txt  foreign.txt  hsc.txt  implicit.txt  import.txt  layout.txt  prec.txt  string.txt  type.txt  varsym.txt
native/tree-sitter-haskell/test/parse/: newline.target
native/tree-sitter-haskell/test/query/: super-decl.query
native/tree-sitter-haskell/test/rust/: parse-test.rs  parse.rs  show.rs
native/tree-sitter-haskell/test/tags-local/: class.hs  class.target  data.hs  data.target  function.hs  function.target  run.bash
nix/: emacs.nix
prog-data/: .gitignore  bigloo-init.scm  chicken-init.scm  gambit-init.scm  guile-init.scm
prog-data/auto-insert/: insert.cabal  insert.clj  insert.el  insert.eproj-info  insert.h  insert.hs  insert.org  insert.py  insert.sh  insert.snip  insert.xhtml
resources/: good-fortunes.txt  perlis-quotes.txt
resources/auto-insert/: insert-android-manifest.xml  insert-cabal-project  insert-haskell-bench.hs  insert-haskell-exe.hs  insert-haskell-test.hs  insert-haskell-tests.hs  insert-stack.yaml  insert.awk  insert.cabal  insert.cabal.template  insert.chs  insert.el  insert.eproj-info  insert.ginignore  insert.hs.template  insert.hsig.template  insert.html  insert.license-apache-2.0  insert.license-bsd-2  insert.lisp  insert.py  insert.rs  insert.scm  insert.sh  insert.tex  insert.xhtml
scripts/: compress-tree-sitter.sh  dump.sh  emacs-runner.sh  make-dist-el.py  profile-startup.el  profile-startup.sh  recompile-native.sh  recompile-one.sh  recompile-tree-sitter.sh  recompile.sh  utils.sh
src/: .emacs  abbrev+.el  agda-abbrev+.el  agda-autoload.el  agda-setup.el  align-util.el  antlr-setup.el  asm-setup.el  astyle.el  auto-insert-autoload.el  auto-insert-setup.el  awk+.el  awk-interactive.el  awk-setup.el  backups.el  base-emacs-fixes.el  base-emacs-opt.el  bert-rpc.el  bison-setup.el  bkr.el  browse-kill-ring-setup.el  buffer-groups.el  buffer-switching.el  c++-abbrev+.el  c++-autoload.el  c++-setup.el  c-abbrev+.el  c-c++-setup.el  c-indentation.el  c-like-setup.el  c-preprocessor.el  c-setup.el  c-splint.el  calendar-mode-setup.el  cc-autoload.el  cc-setup.el  cedet-setup.el  cmake-setup.el  comint-autoload.el  comint-setup.el  (+210 more)
tests/: .gitignore  abbrev-plus-tests.el  attrap-tests.el  bison-tests.el  comment-tests.el  common-tests.el  dante-tests.el  (+29 more)
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix/: prefix.cabal
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix-long/: .eproj-info  cabal.project  foo.cabal
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix-long/dep/subdep1/: subdep1.cabal
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix-long/dep/subdep1/src/Subdep1/: Foo.hs
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix-long/dep/subdep2/src/Subdep2/: Bar.hs
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix-long/src/: Foo.hs
tests/eproj-sample-projects/haskell-project-with-aux-files/prefix/src/: PrefixFoo.hs
tests/test-data/cabal/: test-components.cabal
tests/test-data/dante/simple-check-project-error-with-relative-path-from-subproject/dep/: Dep.hs  emacs-dante-simple-check-test-project-error-with-rel-path-dep.cabal
tests/test-data/dante/simple-check-project-error-with-relative-path-from-subproject/main/: emacs-dante-simple-check-test-project-error-with-rel-path-main.cabal
tests/test-data/dante/simple-check-project-error-with-relative-path-from-subproject/main/src/Baz/: Quux.hs
tests/test-data/dante/simple-check-project-error-with-relative-path-from-subproject/main/src/Foo/: Bar.hs
tests/test-data/dante/simple-check-project-name-shadowing-error/: emacs-dante-simple-check-test-project-name-shadowing-error.cabal
tests/test-data/dante/simple-check-project-name-shadowing-error/src/: Foo.hs
tests/test-data/dante/simple-repl-project-with-hsc/: emacs-dante-simple-repl-test-project-with-hsc.cabal
tests/test-data/dante/simple-repl-project-with-hsc/src/: Foo.hs
(+499 files in other folders)
