[package]
name = "emacs-native-rs"
version = "0.1.0"
authors = ["Sergey Vinokurov <serg.foo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]
name = "emacs_native_rs"
path = "src/lib.rs"

[[bench]]
name = "bench-fs-search"
path = "src/bin/bench_fs_search.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = ">= 1.0.38"
crossbeam = ">= 0.8.1"
crossbeam-utils = ">= 0.8.0"
emacs = ">= 0.17"
fnv = ">= 1.0"
globset = { version = ">= 0.4.8", default-features = false, features = [] }
pathdiff = ">= 0.1"

# grep = ">= 0.2.8"

grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

[features]
# Requires nigthly
simd-accel = ["grep-searcher/simd-accel"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1