[package]
name = "tree-sitter-hs"
description = "Haskell grammar for tree-sitter"
version = "1.0.0"
keywords = ["incremental", "parsing", "haskell"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tek/tree-sitter-haskell"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[[test]]
name = "parse-test"
path = "test/rust/parse-test.rs"

[[bin]]
name = "parse"
path = "test/rust/parse.rs"
test = false
bench = false
doc = false

[[bin]]
name = "show"
path = "test/rust/show.rs"
test = false
bench = false
doc = false

[dependencies]
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
