-- Created     :  ${date}

name:                ${filename no ext}
version:             0.1.0.0
synopsis:            TODO
description:         TODO
license:             BSD3
-- license-file:        LICENSE
author:              ${author}
maintainer:          ${author} <${email}>

cabal-version:       >= 1.16
build-type:          Simple

library
  exposed-modules:   Foo
--  other-modules:     Utils.Utils
--  hs-source-dirs:    src
  build-depends:     base >= 4.7
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans
                     -rtsopts
--  build-tools:       alex happy c2hs

executable           ${filename no ext}
  main-is:           Main.hs
  build-depends:     base >= 4.7, ${filename no ext}
--  other-modules:     Utils.Utils
--  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans
                     -rtsopts
--  ghc-options:       -main-is MyMain

test-suite ${filename no ext}-test
  type:              exitcode-stdio-1.0
  main-is:           test/Main.hs
  build-depends:     base,
                     hunit, tasty-framework, QuickCheck, tasty-quickcheck,
                     ${filename no ext}
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans
                     -rtsopts
--  hs-source-dirs:    test

