-- Created     :  ${date}

name:
  ${filename no ext}
version:
  0.1.0.0
synopsis:
  TODO
description:
  TODO
license:
  BSD3
-- license-file:
--   LICENSE
author:
  ${author}
maintainer:
  ${author} <${email}>

cabal-version:
  >= 1.16
build-type:
  Simple

library
  exposed-modules:
    Foo
--   other-modules:
--     Utils.Utils
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
--   build-tools:
--     alex happy c2hs
  ghc-prof-options:
    -fprof-auto

executable ${filename no ext}
  main-is:
    Main.hs
  build-depends:
    base >= 4.7,
    ${filename no ext}
--   other-modules:
--     Utils.Utils
--   hs-source-dirs:
--     exe
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
--     -main-is ExeMain
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  ghc-prof-options:
    -fprof-auto

test-suite ${filename no ext}-test
  type:
    exitcode-stdio-1.0
  main-is:
    tests/Main.hs
  build-depends:
    HUnit,
    QuickCheck,
    base,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    ${filename no ext}
--   hs-source-dirs:
--     tests
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
--     -main-is TestMain
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  ghc-prof-options:
    -fprof-auto

