-- Created     :  ${date}

name:
  ${filename no ext}
version:
  0.1.0.0
synopsis:
  TODO
description:
  TODO
license:
  BSD3
-- license-file:
--   LICENSE
author:
  ${author}
maintainer:
  ${author} <${email}>

cabal-version:
  >= 1.16
build-type:
  Simple

-- build-type: Custom
--
-- custom-setup
--   setup-depends:
--     base >= 4.7,
--     Cabal >= 1.16

library
  exposed-modules:
    Foo
--   other-modules:
--     Other.Module
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7
--   build-tools:
--     alex happy c2hs
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto

executable ${filename no ext}
  main-is:
    exe/Main.hs
--   other-modules:
--     Other.Module
--   hs-source-dirs:
--     .
--     exe
  build-depends:
    base >= 4.7,
    ${filename no ext}
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
--     -main-is ExeMain
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto

test-suite ${filename no ext}-test
  type:
    exitcode-stdio-1.0
  main-is:
    test/TestMain.hs
--   other-modules:
--     Other.Module
--   hs-source-dirs:
--     .
--     test
  build-depends:
    HUnit,
    QuickCheck,
    base,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    ${filename no ext}
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
--     -main-is TestMain
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto

