cabal-version: 3.6

-- Created :  8 February 2023

name:
  test-components
version:
  0.1
synopsis:
  TODO
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2023
license:
  Apache-2.0
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Changelog.md
  Readme.md

homepage:
  https://github.com/sergv/test-components

source-repository head
  type: git
  location: https://github.com/sergv/test-components.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  -- if impl(ghc >= 8.10)
  --   ghc-options:
  --     -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Foo
    Bar
    Baz.Quux
  other-modules:
    Frob.Decombobulate
  hs-source-dirs:
    src
  build-depends:
    , base ^>= 4.14
    , text ^>= { 1.2.5, 2.0 }

executable test-components-exe1
  import: ghc-options
  main-is:
    exe/Main1.hs
  hs-source-dirs:
    ./.
  build-depends:
    , base ^>= 4.14
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is Main1

test-suite test-components-test1
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/TestMain1.hs
  hs-source-dirs:
    ./.
  build-depends:
    , HUnit
    , QuickCheck
    , base ^>= 4.14
    , optparse-applicative
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestMain

benchmark test-components-bench1
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    bench/TestComponentsBench1.hs
  hs-source-dirs:
    ./.
  build-depends:
    , base >= 4.14
    , tasty-bench >= 0.3.2
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestComponentsBench1


executable test-components-exe2
  import: ghc-options
  main-is:
    Main2.hs
  hs-source-dirs:
    exe/
  build-depends:
    , base ^>= 4.24
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is Main2

test-suite test-components-test2
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    TestMain2.hs
  hs-source-dirs:
    test/
  build-depends:
    , HUnit
    , QuickCheck
    , base ^>= 4.24
    , optparse-applicative
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestMain

benchmark test-components-bench2
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    TestComponentsBench2.hs
  hs-source-dirs:
    bench/
  build-depends:
    , base >= 4.24
    , tasty-bench >= 0.3.2
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestComponentsBench2


executable test-components-exe3
  import: ghc-options
  main-is:
    Main3.hs
  hs-source-dirs:
    exe
  build-depends:
    , base ^>= 4.34
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is Main3

test-suite test-components-test3
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    TestMain3.hs
  hs-source-dirs:
    test
  build-depends:
    , HUnit
    , QuickCheck
    , base ^>= 4.34
    , optparse-applicative
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestMain

benchmark test-components-bench3
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    TestComponentsBench3.hs
  hs-source-dirs:
    bench
  build-depends:
    , base >= 4.34
    , tasty-bench >= 0.3.3
    , test-components
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -A32M"
    -main-is TestComponentsBench3

