cabal-version: 3.0

name:
  foo
version:
  0.1
synopsis:
  TODO
description:
  TODO
license:
  Apache-2.0

build-type:
  Simple

common ghc-options
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wname-shadowing
    -Wno-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
      -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  if impl(ghc >= 8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

library
  import: ghc-options
  exposed-modules:
    Foo
  hs-source-dirs:
    src
  build-depends:
    base >= 4.9, subdep1, prefix
