cabal-version: 3.0

-- Created :  9 January 2022

name:
  prefix
version:
  0.1
synopsis:
  TODO
description:
  TODO
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

common ghc-options
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wname-shadowing
    -Wno-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
      -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  if impl(ghc >= 8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

library
  import: ghc-options
  exposed-modules:
    PrefixFoo
  hs-source-dirs:
    src
  build-depends:
    base >= 4.9
