cabal-version: 3.6

-- Created :  9 October 2025

name:
  emacs-dante-simple-repl-test-project-with-hsc
version:
  0.1
synopsis:
  TODO
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2025
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -- -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-missing-poly-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Foo
    Bar.Baz
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.16
  build-tool-depends:
    , hsc2hs:hsc2hs


